# StratgicAI-Autonomous-MA-Analyst-Platform-with-CrewAI

./: README.md  app.py  pyproject.toml  requirements.txt
knowledge/: user_preference.txt
src/strategicai/: crew.py  main.py  models.py
src/strategicai/config/: agents.yaml  tasks.yaml
src/strategicai/tools/: financial_data_tools.py  sec_tools.py
